[package]
name = "mesh-fs"
version = "0.1.0"
authors = ["kt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
log = "0.4"
md5 = "0.7.0"
pretty_env_logger = "0.3"
sled = "0.34.6"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
yaml-rust = "0.4"