[package]
name = "mesh-server"
version = "0.1.0"
authors = ["kt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
sled = "0.34.6"
tokio = { version = "1", features = ["full"] }
warp = "0.3"